--- a/styles/_main-info.scss
+++ b/styles/_main-info.scss
@@ -44,7 +44,7 @@
     }
 }
 .mars-one__picture-wrapper {
-    box-sizing: border-box;
+    // box-sizing: border-box;
     width: 90%;
     align-self: stretch;
     &__item {
