--- a/styles/_banner-contact.scss
+++ b/styles/_banner-contact.scss
@@ -18,9 +18,9 @@
         z-index: 2;
         grid-column: 1 / -1;
         grid-row: 1/ -1;
-        padding: 20% 10%;
-        justify-self: center;
-        align-self: start;
+        padding: 5% 5%;
+        justify-self: start;
+        align-self: end;
         width: 70%;
         @media (min-width: 700px) {
             width: 40%;
@@ -68,7 +68,7 @@
     margin-top: 0;
     align-self: flex-start;
 
-    clip-path: ellipse(70% 57% at 31% 100%);
+    clip-path: ellipse(72% 60% at 31% 100%);
     // transform: rotate(-5deg);
     // clip-path: ellipse(72% 57% at 29% 100%);
 }
