--- a/styles/_banner-faq.scss
+++ b/styles/_banner-faq.scss
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background-image: linear-gradient(
             to top,
-            rgba(193, 85, 85, 0.5),
+            rgba(116, 23, 23, 0.5),
             rgba(36, 2, 2, 0.5)
         ),
         url(../pics/hero-2.jpg);
@@ -76,3 +76,6 @@
     transform: translateY(20px);
     background: rgba(67, 109, 172, 0.9);
 }
+
+// rgba(193, 85, 85, 0.5),
+// rgba(36, 2, 2, 0.5)
