--- a/styles/_banner-main.scss
+++ b/styles/_banner-main.scss
@@ -9,26 +9,27 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-height: 110vh;
+    min-height: 100vh;
     display: grid;
     // justify-content: end;
     align-items: center;
     position: relative;
+    @media (min-width: 450px) {
+        min-height: 110vh;
+    }
     @media (min-width: 2000px) {
         min-height: 120vh;
     }
     &__text-wrapper {
         z-index: 2;
         grid-column: 1 / -1;
-        grid-row: 1/ -1;
+        // grid-row: 1/ -1;
         padding: 20% 10%;
-        justify-self: center;
+        justify-self: end;
         align-self: start;
         width: 70%;
         @media (min-width: 700px) {
             width: 40%;
-            justify-self: end;
-            align-self: start;
             padding: 10% 10%;
         }
         @media (min-width: 1000px) {
@@ -37,7 +38,6 @@
         @media (min-width: 1500px) {
             width: 25%;
         }
-
         &__heading {
             margin-top: 0;
             @extend %firstheadings;
@@ -58,15 +58,13 @@
 .banner::before {
     z-index: 1;
     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
-    // display: block;
     position: absolute;
     content: "";
     width: 100vw;
     height: 100vh;
-    margin-top: 0;
-    align-self: flex-start;
+    // margin-top: 0;
+    align-self: start;
     clip-path: ellipse(69% 60% at 61% 22%);
-    // transform: rotate(-5deg);
 }
 
 .banner::before {
