--- a/styles/_banner-main.scss
+++ b/styles/_banner-main.scss
@@ -60,7 +60,7 @@
     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
     position: absolute;
     content: "";
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     // margin-top: 0;
     align-self: start;
