--- a/styles/_banner-contact.scss
+++ b/styles/_banner-contact.scss
@@ -60,19 +60,14 @@
 .banner-contact::before {
     z-index: 1;
     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
-    // display: block;
     position: absolute;
     content: "";
-    width: 100vw;
+    width: 100%;
     height: 110vh;
     margin-top: 0;
     align-self: flex-start;
-
     clip-path: ellipse(72% 60% at 31% 100%);
-    // transform: rotate(-5deg);
-    // clip-path: ellipse(72% 57% at 29% 100%);
 }
-
 .banner-contact::before {
     transform: translateY(-20px);
     background: rgba(67, 109, 172, 0.9);
