--- a/styles/_banner-faq.scss
+++ b/styles/_banner-faq.scss
@@ -61,10 +61,9 @@
 .banner-faq::before {
     z-index: 1;
     background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
-    // display: block;
     position: absolute;
     content: "";
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     margin-top: 0;
     align-self: flex-start;
@@ -76,6 +75,3 @@
     transform: translateY(20px);
     background: rgba(67, 109, 172, 0.9);
 }
-
-// rgba(193, 85, 85, 0.5),
-// rgba(36, 2, 2, 0.5)
