--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ label {
   background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
   position: absolute;
   content: "";
-  max-width: 100vw;
+  width: 100%;
   height: 100vh;
   -ms-flex-item-align: start;
       -ms-grid-row-align: start;
@@ -692,7 +692,7 @@ main {
   background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
   position: absolute;
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   margin-top: 0;
   -ms-flex-item-align: start;
@@ -1161,7 +1161,7 @@ main {
   background: linear-gradient(182deg, #00132c 61%, rgba(21, 52, 98, 0.9));
   position: absolute;
   content: "";
-  width: 100vw;
+  width: 100%;
   height: 110vh;
   margin-top: 0;
   -ms-flex-item-align: start;
