--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: $background-footer;
+    background: $color-heading-blue;
     margin-bottom: 0;
     text-align: center;
     padding-top: 7em;
