--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,4 +3,4 @@ $text-color-two: #e32700;
 $text-color-three: #323232;
 $background-color-two: #f1f1f1;
 $color-heading-blue: #2c4f80;
-$background-footer: #2c4f80;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,800&display=swap");
