--- a/styles/_about-mars.scss
+++ b/styles/_about-mars.scss
@@ -3,9 +3,7 @@
     display: grid;
     grid-gap: 2em;
     grid-template-columns: 3fr 1fr;
-    // grid-template-rows: auto auto;
     justify-items: center;
-    // align-items: center;
     padding: 2.5em 2.5em 5em 2.5em;
     @media (min-width: 650px) {
         padding-left: 5%;
@@ -17,7 +15,6 @@
     }
     @media (min-width: 1300px) {
         grid-template-columns: 2fr 1fr;
-        // grid-row: auto auto auto;
         grid-gap: 3em;
     }
     @media (min-width: 1600px) {
@@ -32,34 +29,13 @@
             "text"
             "text";
         grid-row: reperat(3, 200px);
-        // grid-column: auto;
-        // grid-auto-flow: row;
         justify-items: center;
         padding: 1em;
         grid-gap: 1.5em;
         @extend %boxshadow;
-        // &-two {
-        //     background: $textandbackground-color-one;
-        //     display: grid;
-        //     grid-template-areas:
-        //         "picture"
-        //         "text"
-        //         "text";
-        //     justify-items: center;
-        //     grid-gap: 1.5em;
-        //     @extend %boxshadow;
-        //     padding: 1em;
-
-        //     @media (min-width: 650px) {
-        //         grid-template-areas: "picture space text";
-        //         grid-column: 200px 50px 1fr;
-        //         padding: 0;
-        //     }
-        // }
         @media (min-width: 650px) {
-            grid-template-areas: "picture space text";
-            grid-column: 200px 50px 1fr;
-            // grid-row: auto;
+            grid-template-areas: "picture text";
+            grid-column: 200px 1fr;
         }
     }
     &__heading {
@@ -125,8 +101,8 @@
     @extend %boxshadow;
     padding: 1em;
     @media (min-width: 650px) {
-        grid-template-areas: "picture space text";
-        grid-column: 200px 50px 1fr;
+        grid-template-areas: "picture text";
+        grid-column: 200px 1fr;
         padding: 0;
     }
     @media (min-width: 1300px) {
@@ -135,31 +111,22 @@
     }
 }
 .two {
-    padding: 2em 1em 2em 0;
+    padding: 2em 1em 2em 1em;
     @media (min-width: 1500px) {
         padding-bottom: 4em;
     }
 }
-// .about-mars__article:nth-of-type(3) {
-//     grid-column: 1 / -1;
-//     @media (min-width: 1300px) {
-//         padding-top: 0;
-//         height: 100%;
-//         grid-row: span 2;
-//         grid-column: 2;
-//     }
-// }
 .three {
     grid-column: 1 / -1;
     @media (min-width: 1300px) {
         padding-top: 0;
+        padding-bottom: 0;
         height: 100%;
         grid-row: span 2;
         grid-column: 2;
         grid-template-areas:
             "picture"
             "text";
-        padding-bottom: 0;
     }
     &--picture {
         width: 75%;
@@ -169,10 +136,10 @@
 
 .read-more {
     border-radius: 10px;
-    border: solid 1px $background-footer;
+    border: solid 1px $color-heading-blue;
     width: 130px;
     height: 40px;
-    color: $background-footer;
+    color: $color-heading-blue;
     background: $textandbackground-color-one;
     &:hover {
         @media (min-width: 770px) {
