--- a/styles/_facts.scss
+++ b/styles/_facts.scss
@@ -48,7 +48,7 @@
 .facts-article__live-on-mars {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
-    padding: 1em;
+    padding: 2em;
     @extend %boxshadow;
     @media (min-width: 1000px) {
         grid-column: 1 / 2;
@@ -69,7 +69,7 @@
 .facts-article__risks {
     background: $textandbackground-color-one;
     grid-column: 1 / -1;
-    padding: 1em;
+    padding: 2em;
     @extend %boxshadow;
     @media (min-width: 1000px) {
         grid-row: 2;
@@ -116,8 +116,7 @@
     }
     &__wrapper {
         @media (min-width: 1000px) {
-            padding: 4em;
-            padding-right: 0;
+            padding: 4em 0 4em 2em;
             align-self: center;
         }
         @media (min-width: 1300px) {
@@ -126,12 +125,13 @@
     }
     &__heading {
         @extend %headingprops;
-
+        padding-left: 1.2em;
         @media (min-width: 1000px) {
             padding-right: 3vw;
         }
     }
     &__text {
+        padding-left: 2em;
         padding-right: 5vw;
         @extend %textprops;
     }
