--- a/styles/_input.scss
+++ b/styles/_input.scss
@@ -1,96 +1,66 @@
 .join-in {
     background: $background-color-two;
     padding: 5% 10% 5% 10%;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 1fr;
-    @media (min-width: 1000px) {
-        grid-auto-columns: 1fr 1fr 1fr;
-    }
-
-    &__heading-wrapper {
-        @media (min-width: 1000px) {
-            grid-column: 2;
-        }
-    }
 }
+
 .input {
-    grid-column: span 3;
-    background: $textandbackground-color-one;
     display: grid;
+    background: $textandbackground-color-one;
+    padding: 5% 10%;
     grid-gap: 1em;
-    padding: 10%;
-    // grid-auto-flow: row;
-    // @media (min-width: 450px) {
-    //     grid-template-columns: 1fr 1fr;
-    // }
-    @media (min-width: 920px) {
-        grid-gap: 2em;
-        // grid-template-areas:
-        //     "fistname lastname birthdate"
-        //     "profession primeskill empty"
-        //     "motivation motivation motivation";
+    grid-column: span 2;
+    @media (min-width: 600px) {
+        grid-template-columns: 1fr 1fr;
+    }
+    @media (min-width: 1000px) {
         grid-template-columns: 2fr 2fr 1fr;
+        grid-gap: 2em;
     }
-    // &__box__fistname {
-    //     @media (min-width: 450px) {
-    //     }
-    //     @media (min-width: 920px) {
-    //         grid-area: fistname;
-    //     }
-    // }
-    // &__box__lastname {
-    //     @media (min-width: 450px) {
-    //     }
-    //     @media (min-width: 920px) {
-    //         grid-area: lastname;
-    //     }
-    // }
-    &__box__birthdate {
-        @media (min-width: 450px) {
-            grid-column: span 2;
-        }
-        @media (min-width: 920px) {
-            grid-column: span 1;
-        }
-    }
-    // &__box__profession {
-    //     @media (min-width: 450px) {
-    //     }
-    //     @media (min-width: 920px) {
-    //         grid-area: profession;
-    //     }
-    // }
-    // &__box__primeskill {
-    //     @media (min-width: 450px) {
-    //     }
-    //     @media (min-width: 920px) {
-    //         grid-area: primeskill;
-    //     }
-    // }
-    // &__motivation {
-    //     @media (min-width: 450px) {
-    //     }
-    //     @media (min-width: 920px) {
-    //         grid-area: motivation;
-    //     }
-
-    &__message {
+    &__box {
         width: 100%;
-        border: solid 1px #2c4f80;
+        height: 30px;
+        border-radius: 5px;
+        border: solid 1px $color-heading-blue;
     }
-}
-&__box {
-    width: 100%;
-    border-radius: 5px;
-    border: solid 1px #2c4f80;
-}
-&__submit__button {
-    color: #2c4f80;
-    width: 128px;
-    height: 38px;
-    border-radius: 10px;
-    border: solid 1px #2c4f80;
+    &__submit {
+        grid-column: 1 / -1;
+        justify-self: center;
+        margin-top: 1em;
+    }
+    &__submit__button {
+        color: $color-heading-blue;
+        width: 128px;
+        height: 38px;
+        border-radius: 10px;
+        border: solid 1px $color-heading-blue;
+        background: $textandbackground-color-one;
+        &:hover {
+            @media (min-width: 770px) {
+                color: $textandbackground-color-one;
+                background: rgba(83, 135, 212, 0.9);
+                font-weight: bold;
+            }
+        }
+    }
+    &__box__birthdate {
+        width: 100%;
+        @media (min-width: 600px) {
+            grid-column: span 2;
+            width: 40%;
+        }
+        @media (min-width: 1000px) {
+            width: 100%;
+            grid-column: 3;
+        }
+    }
+    &__motivation {
+        grid-column: 1 / -1;
+        &__message {
+            width: 100%;
+            height: 200px;
+            border: solid 1px $color-heading-blue;
+        }
+    }
 }
 
 label {
