--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,800&display=swap");
 .about-mars__picture-wrapper__item-two, .facts-article__todo__img-item {
   display: block;
   -o-object-fit: cover;
@@ -227,7 +228,7 @@ main {
   }
 }
 
-@media (min-width: 770px) {
+@media (min-width: 768px) {
   .navbar-head__list__link:hover {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
@@ -264,9 +265,11 @@ main {
   transition: 1s;
 }
 
-.navbar-head__logo-wrapper__item:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+@media (min-width: 768px) {
+  .navbar-head__logo-wrapper__item:hover {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 .mars-one__main-info {
@@ -334,6 +337,7 @@ main {
 
 .mars-one__info__text--bolder {
   color: #e32700;
+  font-weight: bold;
 }
 
 @media (min-width: 800px) {
@@ -421,8 +425,8 @@ main {
 
 @media (min-width: 650px) {
   .about-mars__article {
-        grid-template-areas: "picture space text";
-    grid-column: 200px 50px 1fr;
+        grid-template-areas: "picture text";
+    grid-column: 200px 1fr;
   }
 }
 
@@ -516,8 +520,8 @@ main {
 
 @media (min-width: 650px) {
   .about-mars__article-two {
-        grid-template-areas: "picture space text";
-    grid-column: 200px 50px 1fr;
+        grid-template-areas: "picture text";
+    grid-column: 200px 1fr;
     padding: 0;
   }
 }
@@ -533,7 +537,7 @@ main {
 }
 
 .two {
-  padding: 2em 1em 2em 0;
+  padding: 2em 1em 2em 1em;
 }
 
 @media (min-width: 1500px) {
@@ -549,12 +553,12 @@ main {
 @media (min-width: 1300px) {
   .three {
     padding-top: 0;
+    padding-bottom: 0;
     height: 100%;
     grid-row: span 2;
     -ms-grid-column: 2;
     grid-column: 2;
         grid-template-areas: "picture" "text";
-    padding-bottom: 0;
   }
 }
 
@@ -694,7 +698,6 @@ main {
   content: "";
   width: 100%;
   height: 100vh;
-  margin-top: 0;
   -ms-flex-item-align: start;
       align-self: flex-start;
   -webkit-clip-path: ellipse(69% 60% at 61% 22%);
@@ -775,7 +778,7 @@ main {
 .facts-article__live-on-mars {
   background: #ffffff;
   grid-column: 1 / -1;
-  padding: 1em;
+  padding: 2em;
 }
 
 @media (min-width: 1000px) {
@@ -803,7 +806,7 @@ main {
 .facts-article__risks {
   background: #ffffff;
   grid-column: 1 / -1;
-  padding: 1em;
+  padding: 2em;
 }
 
 @media (min-width: 1000px) {
@@ -875,8 +878,7 @@ main {
 
 @media (min-width: 1000px) {
   .facts-article__todo__wrapper {
-    padding: 4em;
-    padding-right: 0;
+    padding: 4em 0 4em 2em;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -889,6 +891,10 @@ main {
   }
 }
 
+.facts-article__todo__heading {
+  padding-left: 1.2em;
+}
+
 @media (min-width: 1000px) {
   .facts-article__todo__heading {
     padding-right: 3vw;
@@ -896,6 +902,7 @@ main {
 }
 
 .facts-article__todo__text {
+  padding-left: 2em;
   padding-right: 5vw;
 }
 
@@ -1163,7 +1170,6 @@ main {
   content: "";
   width: 100%;
   height: 110vh;
-  margin-top: 0;
   -ms-flex-item-align: start;
       align-self: flex-start;
   -webkit-clip-path: ellipse(72% 60% at 31% 100%);
